2010-12-02  MORITA Hajime  <morrita@google.com>

Reviewed by Dimitri Glazkov.

        [chromium] Fix drawing of inset box shadows
        https://bugs.webkit.org/show_bug.cgi?id=41576

        * platform/chromium-win/fast/box-shadow/inset-expected.checksum:
        * platform/chromium-win/fast/box-shadow/inset-expected.png:
2010-12-02  MORITA Hajime  <morrita@google.com>

        Reviewed by Dimitri Glazkov.

        [chromium] Fix drawing of inset box shadows
        https://bugs.webkit.org/show_bug.cgi?id=41576

        When clearing outside clipped path, the context contains unexpected transform.
        Fixed to restore original state before the clear.

        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::clipPathAntiAliased):
        (WebCore::PlatformContextSkia::applyAntiAliasedClipPaths):

Canonical link: https://commits.webkit.org/64436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74089 268f45cc-cd09-0410-ab3c-d52691b4dbfc