WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -299,6 +299,9 @@ void PlatformContextSkia::clipPathAntiAliased(const SkPath& clipPath)
     if (!haveLayerOutstanding) {
         SkRect bounds = clipPath.getBounds();
         canvas()->saveLayerAlpha(&bounds, 255, static_cast<SkCanvas::SaveFlags>(SkCanvas::kHasAlphaLayer_SaveFlag | SkCanvas::kFullColorLayer_SaveFlag | SkCanvas::kClipToLayer_SaveFlag));
+        // Guards state modification during clipped operations.
+        // The state is popped in applyAntiAliasedClipPaths().
+        canvas()->save();
     }
 }
 
@@ -674,6 +677,8 @@ void PlatformContextSkia::applyAntiAliasedClipPaths(WTF::Vector<SkPath>& paths)
     //
     // When we call restore on the SkCanvas, the layer's bitmap is composed
     // into the layer below and we end up with correct, anti-aliased clipping.
+
+    m_canvas->restore();
 
     SkPaint paint;
     paint.setXfermodeMode(SkXfermode::kClear_Mode);
